[CSS Shapes] line height grows around polygon and incorrectly causes text to wrap to next line https://bugs.webkit.org/show_bug.cgi?id=131622

Reviewed by Bem Jones-Bey.

Source/WebCore:
Corrected an earlier PolygonShape fix https://bugs.webkit.org/show_bug.cgi?id=132132
When the top or bottom of a layout line is coincident with a polygon edge vertex, we
only consider it an intersection if the edge extends into the line.

Test: fast/shapes/shape-outside-floats/shape-outside-edge-case.html

* rendering/shapes/PolygonShape.cpp:
(WebCore::OffsetPolygonEdge::clippedEdgeXRange):

LayoutTests:
* fast/shapes/shape-outside-floats/shape-outside-edge-case-expected.html: Added.
* fast/shapes/shape-outside-floats/shape-outside-edge-case.html: Added.


Canonical link: https://commits.webkit.org/150952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168778 268f45cc-cd09-0410-ab3c-d52691b4dbfc